<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <!-- Product name view use for searching product -->
    <EditText
        android:id="@+id/enter_product_name"
        android:layout_width="337dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/Product_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- First Level Floor Category -->
    <Spinner
        android:id="@+id/select_floorcategory"
        android:layout_width="337dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/Floor_category_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_product_name" />

    <!-- First Level Floor type -->
    <Spinner
        android:id="@+id/select_floortype"
        android:layout_width="337dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/Floor_type_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_floorcategory"
        tools:visibility="visible" />

    <!-- Store name view for searching store -->
    <EditText
        android:id="@+id/enter_store_name"
        android:layout_width="337dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/Store_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button1" />

    <!-- Search Product -->
    <Button
        android:id="@+id/search_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Search_Product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_floortype" />

    <!-- Search Store -->
    <Button
        android:id="@+id/search_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Search_Store"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_store_name"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>